--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -92,7 +92,7 @@ import "@components/css-components/footer-cta.css";
           </div>
 
           <div class="book_button-footer">
-            <a href="/book">BOOK</a>
+            <a href="/book/">BOOK</a>
           </div>
         </div>
 
