--- a/src/components/units-appliances-same-day.astro
+++ b/src/components/units-appliances-same-day.astro
@@ -22,7 +22,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Refrigerator Repair book" href="/book">BOOK US</a
+      <a title="Same day Refrigerator Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -59,7 +59,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Freezer Repair book" href="/book">BOOK US</a
+      <a title="Same day Freezer Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -94,7 +94,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Washer Repair book" href="/book">BOOK US</a
+      <a title="Same day Washer Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -129,7 +129,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Dryer Repair book" href="/book">BOOK US</a
+      <a title="Same day Dryer Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -165,7 +165,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Stove Repair book" href="/book">BOOK US</a
+      <a title="Same day Stove Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -201,7 +201,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Dishwasher Repair book" href="/book">BOOK US</a
+      <a title="Same day Dishwasher Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -236,7 +236,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Oven Repair book" href="/book">BOOK US</a>
+      <a title="Same day Oven Repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -270,7 +270,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Cooktop Repair book" href="/book">BOOK US</a
+      <a title="Same day Cooktop Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -307,7 +307,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Microwave Repair book" href="/book">BOOK US</a
+      <a title="Same day Microwave Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -345,7 +345,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Range Hood Repair book" href="/book">BOOK US</a
+      <a title="Same day Range Hood Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -381,7 +381,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Fireplace Repair book" href="/book">BOOK US</a
+      <a title="Same day Fireplace Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -419,7 +419,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Barbecue Grill Repair book" href="/book">BOOK US</a
+      <a title="Same day Barbecue Grill Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -454,7 +454,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Wine Cooler Repair book" href="/book">BOOK US</a>
+      <a title="Same day Wine Cooler Repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -485,7 +485,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Wine Cellar Repair book" href="/book">BOOK US</a
+      <a title="Same day Wine Cellar Repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -520,7 +520,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Induction Cooktop Repair estimate" href="/book">BOOK US</a
+      <a title="Same day Induction Cooktop Repair estimate" href="/book/">BOOK US</a
       >
     </div>
 
