--- a/src/components/units-commercial-equipment-beverly-hills.astro
+++ b/src/components/units-commercial-equipment-beverly-hills.astro
@@ -18,7 +18,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -42,7 +42,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day refrigerator repair Beverly Hills" href="/book"
+      <a title="Same day refrigerator repair Beverly Hills" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -67,7 +67,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day washer repair Beverly Hills" href="/book">BOOK US</a>
+      <a title="Same day washer repair Beverly Hills" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -90,7 +90,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day dryer repair Beverly Hills" href="/book">BOOK US</a>
+      <a title="Same day dryer repair Beverly Hills" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -113,7 +113,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day stove repair Beverly Hills" href="/book">BOOK US</a>
+      <a title="Same day stove repair Beverly Hills" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -136,7 +136,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Commercial dishwasher repair Beverly Hills" href="/book">BOOK US</a>
+      <a title="Commercial dishwasher repair Beverly Hills" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -159,7 +159,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day oven repair Beverly Hills" href="/book">BOOK US</a>
+      <a title="Same day oven repair Beverly Hills" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -182,7 +182,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Walk in cooler repair Beverly Hills" href="/book"
+      <a title="Walk in cooler repair Beverly Hills" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -207,7 +207,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day walk-in freezer repair Beverly Hills" href="/book"
+      <a title="Same day walk-in freezer repair Beverly Hills" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -232,7 +232,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day ice mashine repair Beverly Hills" href="/book">BOOK US</a
+      <a title="Same day ice mashine repair Beverly Hills" href="/book/">BOOK US</a
       >
     </div>
 
@@ -256,7 +256,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day slushie mashine repair Beverly Hills" href="/book"
+      <a title="Same day slushie mashine repair Beverly Hills" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -282,7 +282,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a
         title="Same day showcase refrigerator / freezer Beverly Hills"
-        href="/book">BOOK US</a
+        href="/book/">BOOK US</a
       >
     </div>
 
@@ -306,7 +306,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day bar refrigerator repair Beverly Hills" href="/book"
+      <a title="Same day bar refrigerator repair Beverly Hills" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -330,7 +330,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day gas dryer repair Beverly Hills" href="/book">BOOK US</a>
+      <a title="Same day gas dryer repair Beverly Hills" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -352,7 +352,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Laundry Speed Queen repair Beverly Hills" href="/book"
+      <a title="Same day Laundry Speed Queen repair Beverly Hills" href="/book/"
         >BOOK US</a
       >
     </div>
