--- a/src/components/units-commercial-equipment-pasadena.astro
+++ b/src/components/units-commercial-equipment-pasadena.astro
@@ -26,7 +26,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a>
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -61,7 +61,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day refrigerator repair Pasadena" href="/book"
+      <a title="Same day refrigerator repair Pasadena" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -104,7 +104,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
   </div>
 
     <div class="but-content-machinery">
-      <a title="Same day washer repair Pasadena" href="/book">BOOK US</a>
+      <a title="Same day washer repair Pasadena" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -142,7 +142,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day dryer repair Pasadena" href="/book">BOOK US</a>
+      <a title="Same day dryer repair Pasadena" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -185,7 +185,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day stove repair Pasadena" href="/book">BOOK US</a>
+      <a title="Same day stove repair Pasadena" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -221,7 +221,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Commercial dishwasher repair Pasadena" href="/book">BOOK US</a>
+      <a title="Commercial dishwasher repair Pasadena" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -261,7 +261,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day oven repair Pasadena" href="/book">BOOK US</a>
+      <a title="Same day oven repair Pasadena" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -303,7 +303,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
 
     <div class="but-content-machinery">
-      <a title="Walk in cooler repair Pasadena" href="/book"
+      <a title="Walk in cooler repair Pasadena" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -345,7 +345,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day walk-in freezer repair Pasadena" href="/book"
+      <a title="Same day walk-in freezer repair Pasadena" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -389,7 +389,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day ice mashine repair Pasadena" href="/book">BOOK US</a
+      <a title="Same day ice mashine repair Pasadena" href="/book/">BOOK US</a
       >
     </div>
 
@@ -435,7 +435,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day slushie mashine repair Pasadena" href="/book"
+      <a title="Same day slushie mashine repair Pasadena" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -483,7 +483,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a
         title="Same day showcase refrigerator / freezer Pasadena"
-        href="/book">BOOK US</a
+        href="/book/">BOOK US</a
       >
     </div>
 
@@ -526,7 +526,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day bar refrigerator repair Pasadena" href="/book"
+      <a title="Same day bar refrigerator repair Pasadena" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -566,7 +566,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day gas dryer repair Pasadena" href="/book">BOOK US</a>
+      <a title="Same day gas dryer repair Pasadena" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -606,7 +606,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Laundry Speed Queen repair Pasadena" href="/book"
+      <a title="Same day Laundry Speed Queen repair Pasadena" href="/book/"
         >BOOK US</a
       >
     </div>
