--- a/src/components/units-heating-ventilation-air-conditioning.astro
+++ b/src/components/units-heating-ventilation-air-conditioning.astro
@@ -22,7 +22,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -49,7 +49,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -76,7 +76,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -103,7 +103,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -130,7 +130,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -157,7 +157,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
