--- a/src/components/units-appliances-glessell-park.astro
+++ b/src/components/units-appliances-glessell-park.astro
@@ -20,7 +20,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -51,7 +51,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -82,7 +82,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -110,7 +110,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -138,7 +138,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -169,7 +169,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -198,7 +198,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Oven Repair Glessell Park" href="/book">BOOK US</a>
+      <a title="Oven Repair Glessell Park" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -226,7 +226,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -255,7 +255,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -286,7 +286,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -315,7 +315,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -345,7 +345,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
+      <a title="Book Same Day Appliance Repair Services" href="/book/">BOOK US</a
       >
     </div>
 
@@ -375,7 +375,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Wine Cooler repair Glessell Park" href="/book">BOOK US</a>
+      <a title="Same day Wine Cooler repair Glessell Park" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -402,7 +402,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day wine cellar repair Glessell Park" href="/book">BOOK US</a
+      <a title="Same day wine cellar repair Glessell Park" href="/book/">BOOK US</a
       >
     </div>
 
@@ -431,7 +431,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Induction Cooktop Repair Glessell Park" href="/book">BOOK US</a
+      <a title="Same day Induction Cooktop Repair Glessell Park" href="/book/">BOOK US</a
       >
     </div>
 
