--- a/src/components/units-commercial-equipment-same-day.astro
+++ b/src/components/units-commercial-equipment-same-day.astro
@@ -18,7 +18,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial refrigerator repair book" href="/book">BOOK US</a
+      <a title="Same day Commercial refrigerator repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -47,7 +47,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Freezer repair book" href="/book"
+      <a title="Same day Commercial Freezer repair book" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -77,7 +77,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Washing Machine repair book" href="/book">BOOK US</a>
+      <a title="Same day Commercial Washing Machine repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -106,7 +106,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Dryer repair book" href="/book">BOOK US</a>
+      <a title="Same day Commercial Dryer repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -134,7 +134,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Stove repair book" href="/book">BOOK US</a>
+      <a title="Same day Commercial Stove repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -164,7 +164,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Dishwasher repair book" href="/book">BOOK US</a>
+      <a title="Same day Commercial Dishwasher repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -193,7 +193,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Oven repair book" href="/book">BOOK US</a>
+      <a title="Same day Commercial Oven repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -223,7 +223,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Walk in cooler repair book" href="/book">BOOK US</a>
+      <a title="Same day Walk in cooler repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -251,7 +251,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Walk in freezer repair book" href="/book"
+      <a title="Same day Walk in freezer repair book" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -284,7 +284,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Ice machine repair book" href="/book">BOOK US</a
+      <a title="Same day Commercial Ice machine repair book" href="/book/">BOOK US</a
       >
     </div>
 
@@ -314,7 +314,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Slushie machine repair book" href="/book"
+      <a title="Same day Slushie machine repair book" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -343,7 +343,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Showcase refrigerator / freezer Repair book" href="/book">BOOK US</a>
+      <a title="Same day Showcase refrigerator / freezer Repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -372,7 +372,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Bar refrigerator Repair book" href="/book"
+      <a title="Same day Bar refrigerator Repair book" href="/book/"
         >BOOK US</a
       >
     </div>
@@ -403,7 +403,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Fryer Machine Repair book" href="/book">BOOK US</a>
+      <a title="Same day Commercial Fryer Machine Repair book" href="/book/">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -431,7 +431,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day Commercial Laundry Repair book" href="/book"
+      <a title="Same day Commercial Laundry Repair book" href="/book/"
         >BOOK US</a
       >
     </div>
