--- a/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
@@ -11,11 +11,16 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
+
+const description = "Fast & reliable commercial refrigerator repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0521";
+const title ="Commercial Refrigerator Repair Los Angeles & Nearby Areas";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Commercial Refrigerator Repair Los Angeles">
+<Layout>
   <Container>
     <div class="content" style="padding: 0 10%">
       <h1 class="top" >
