--- a/src/pages/services/oven-repair-los-angeles.astro
+++ b/src/pages/services/oven-repair-los-angeles.astro
@@ -13,11 +13,15 @@ import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
----
 
+const description = "Fast & reliable oven repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0521";
+const title ="Expert Oven Repair Los Angeles - Fast & Reliable";
+---
+<title>{title}</title>
+<meta name="description" content={description} />
 <Navbar />
 <Reviews />
-<Layout title="Oven Repair Los Angeles and Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
