--- a/src/pages/services/bbq-grill-repair-los-angeles.astro
+++ b/src/pages/services/bbq-grill-repair-los-angeles.astro
@@ -10,11 +10,16 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
+
+const description = "Expert BBQ grill repair in Los Angeles & nearby areas. Fast, affordable, and guaranteed service. Call now for same day appointments! (424) 325-0520";
+const title ="Get Expert Barbecue Grill Repair Los Angeles & Nearby Areas";
 ---
 
+<title>{title}</title>
+<meta name="description" content={description} />
 <Navbar />
 <Reviews />
-<Layout title="Barbecue Grill Repair Los Angeles and Nearby Areas">
+<Layout>
   <Container>
     <main style="max-width: 1920px; padding: 0 10%; margin: 0 auto;">
       <h1>
