--- a/src/pages/services/commercial-dishwasher-repair-los-angeles.astro
+++ b/src/pages/services/commercial-dishwasher-repair-los-angeles.astro
@@ -12,11 +12,16 @@ import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
+
+const description = "Fast & reliable commercial dishwasher repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0520";
+const title ="Commercial Dishwasher Repair Los Angeles & Nearby Areas";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout title="Commercial Dishwasher Repair Los Angeles and Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
