--- a/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
@@ -11,8 +11,9 @@ import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
-const description = "Commercial Ice Machine Repair Los Angeles and Nearby Areas";
-const title ="Commercial Ice Machine Repair";
+
+const description = "Fast & reliable commercial ice machine repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0521";
+const title ="Commercial Ice Machine Repair Los Angeles & Nearby Areas";
 
 import "css/service/style_services.css";
 ---
