--- a/src/pages/services/commercial-showcase-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-showcase-refrigerator-repair-los-angeles.astro
@@ -12,12 +12,16 @@ import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
+
+const description = "Fast & reliable commercial showcase refrigerator repair. Serving LA and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0521";
+const title ="Best Commercial Showcase Refrigerator Repair Los Angeles";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout
-  title="Commercial Showcase Refrigerator Repair Los Angeles and Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
