--- a/src/pages/services/commercial-slushie-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-slushie-machine-repair-los-angeles.astro
@@ -13,11 +13,16 @@ import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
+
+const description = "Fast & reliable commercial slushie machine repair. Serving LA and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0521";
+const title ="Best Commercial Slushie Machine Repair Los Angeles! Call Now";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout title="Commercial Slushie Machine Repair Los Angeles and Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
