--- a/src/pages/services/heat-pump-repair-los-angeles.astro
+++ b/src/pages/services/heat-pump-repair-los-angeles.astro
@@ -12,11 +12,15 @@ import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
+const description = "Fast & reliable heat pump repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now:  (424) 325-0521";
+const title ="Expert Heat Pump Repair Los Angeles - Fast & Reliable";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout title="Heat Pump Repair Los Angeles And Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
