--- a/src/pages/services/hvac-repair-los-angeles.astro
+++ b/src/pages/services/hvac-repair-los-angeles.astro
@@ -14,11 +14,15 @@ import Unitsappliances from "@components/units-appliances-los-angeles.astro";
 import Unitsheatventcondit from "@components/units-heating-ventilation-air-conditioning.astro";
 
 import "css/service-areas/style-service-areas.css";
+const description = "Same day HVAC repair in Los Angeles. Our expert team arrives promptly, diagnoses accurately, and fixes efficiently for your comfort and safety. (424) 325-0521";
+const title ="Same Day HVAC Repair Los Angeles - Guaranteed Fix!";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day AHVAC Repair Los Angeles">
+<Layout>
   <Container>
     <div class="content">
       <h1>
