--- a/src/pages/services/wall-heater-repair-los-angeles.astro
+++ b/src/pages/services/wall-heater-repair-los-angeles.astro
@@ -12,11 +12,16 @@ import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
+
+const description = "Fast & reliable wall heater repair. Serving Los Angeles and nearby areas with expert technicians and quality parts. Call now: (424) 325-0521";
+const title ="Expert Wall Heater Repair Los Angeles - Fast & Reliable";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout title="Wall Heater Repair Los Angeles And Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
