--- a/src/pages/services/water-heater-repair-los-angeles.astro
+++ b/src/pages/services/water-heater-repair-los-angeles.astro
@@ -12,11 +12,17 @@ import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
+
+const description = "Best Water heater repair services from certified technicians. We offer quick diagnostics, same-day repairs, &  a 100% satisfaction guarantee. (424) 325-0520";
+const title ="Water heater Repair: Expert Service Guaranteed ⭐ Call Now!";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <Navbar />
 <Reviews />
-<Layout title="Water Heater Repair Los Angeles And Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
