--- a/src/pages/price-list/air-conditioner-repair-cost.astro
+++ b/src/pages/price-list/air-conditioner-repair-cost.astro
@@ -9,7 +9,17 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
+
+
+
+const description = "Click for air conditioner repair cost & helpfull tips! Take control of your air conditioner repair expenses with our expert advice.  Call: (424) 325-0521";
+const title ="Air Conditioner Repair Cost - Labor & Parts Pricing Guide";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
+
+
 
 <!-- частые вопросы -->
 <script defer>
@@ -31,7 +41,7 @@ import "css/price/style_price.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Air Conditioner Repair Cost">
+<Layout>
   <Container>
     <main>
       <h1>
