--- a/src/pages/price-list/dishwasher-repair-cost.astro
+++ b/src/pages/price-list/dishwasher-repair-cost.astro
@@ -9,7 +9,14 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
+
+const description = "Click for the real costs of Dishwasher repairs & helpfull tips! Find a reliable technicians, and make informed decisions. Call: (424) 325-0531";
+const title ="Dishwasher Repair Cost - Labor & Parts Pricing - Ultimate Guide";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
+
 
 <!-- частые вопросы -->
 <script defer>
@@ -31,7 +38,7 @@ import "css/price/style_price.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Dishwasher Repair Cost">
+<Layout>
   <Container>
     <main>
       <h1><span class="animate-charcter">Dishwasher Repair Cost</span></h1>
