--- a/src/pages/price-list/dryer-roller-replacement-cost.astro
+++ b/src/pages/price-list/dryer-roller-replacement-cost.astro
@@ -8,11 +8,17 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+
+const description = "Navigate dryer roller replacement cost with our comprehensive guide. Find a reliable technicians, and make informed decisions. Call: (424) 325-0537";
+const title ="Dryer Roller Replacement Cost - Ultimate Guide - Tips";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <Navbar />
 <Reviews />
-<Layout title="Dryer Roller Replacement Cost">
+<Layout >
   <Container>
     <main>
       <h1>
