--- a/src/pages/price-list/dryer-vent-installation-cost.astro
+++ b/src/pages/price-list/dryer-vent-installation-cost.astro
@@ -8,11 +8,17 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+
+const description = "Navigate dryer vent installation cost with our comprehensive guide. Find a reliable technicians, and make informed decisions. Call: (424) 325-0539";
+const title ="Dryer Vent Installation Cost - Ultimate Customer Guide";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <Navbar />
 <Reviews />
-<Layout title="Dryer Vent Installation Cost">
+<Layout >
   <Container>
     <main>
       <h1>
