--- a/src/pages/price-list/heat-pump-repair-cost.astro
+++ b/src/pages/price-list/heat-pump-repair-cost.astro
@@ -9,7 +9,14 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
+
+const description = "Click for the real costs of Heat Pump repairs with our comprehensive guide. Find a reliable technicians, and make informed decisions. Call: (424) 325-0543";
+const title ="Heat Pump Repair Cost - Labor & Parts Pricing Guide";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
+
 
 <!-- частые вопросы -->
 <script defer>
@@ -31,7 +38,7 @@ import "css/price/style_price.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Heat Pump Repair Cost">
+<Layout>
   <Container>
     <main>
       <h1>
