--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -8,11 +8,18 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+
+const description = "Click for the real costs of LG dryer repairs with our comprehensive guide. Find a reliable technicians, and make informed decisions. Call: (424) 325-0543";
+const title ="LG Dryer Repair Cost - Labor & Parts - Online Estimates";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
+
 
 <Navbar />
 <Reviews />
-<Layout title="LG Dryer Repair Cost">
+<Layout>
   <Container>
     <main>
       <h1>
