--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -9,7 +9,14 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/price/style_price.css";
+
+const description = "Click for the real costs of refrigerator repairs with our comprehensive guide. Find a reliable technicians, and make informed decisions. Call: (424) 325-0546";
+const title ="Refrigerator Repair Cost - Labor & Parts - Online Estimates";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
+
 
 <!-- частые вопросы -->
 <script defer>
@@ -31,7 +38,7 @@ import "css/price/style_price.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Refrigerator Repair Cost">
+<Layout>
   <Container>
     <main>
       <h1><span class="animate-charcter">Refrigerator Repair Cost</span></h1>
