--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -167,9 +167,14 @@ const menuitems = [
         path: "/price-list/air-conditioner-repair-cost/",
       },
       {
+        title: "Air Duct Cleaning Cost",
+        path: "/price-list/air-duct-cleaning-cost/",
+      },
+      {
         title: "Heat Pump Repair Cost",
         path: "/price-list/heat-pump-repair-cost/",
       },
+
       {
         title: "Commercial Refrigerator Repair Cost",
         path: "/price-list/commercial-refrigerator-repair-cost/",
