--- a/src/pages/price-list/dryer-roller-replacement-cost.astro
+++ b/src/pages/price-list/dryer-roller-replacement-cost.astro
@@ -20,7 +20,7 @@ const title ="Dryer Roller Replacement Cost - Ultimate Guide - Tips";
 <Reviews />
 <Layout >
   <Container>
-    <main>
+    <main style="max-width: 1440px; margin: 0 auto">
       <h1>
         <span class="animate-charcter">Dryer Roller Replacement Cost</span>
       </h1>
