--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -21,7 +21,7 @@ const title ="LG Dryer Repair Cost - Labor & Parts - Online Estimates";
 <Reviews />
 <Layout>
   <Container>
-    <main>
+    <main style="max-width: 1440px; margin: 0 auto">
       <h1>
         <span class="animate-charcter">LG Dryer Repair Cost:</span> Affordable, Efficient,
         and Reliable
