--- a/src/pages/price-list/dryer-thermal-fuse-replacement-cost.astro
+++ b/src/pages/price-list/dryer-thermal-fuse-replacement-cost.astro
@@ -20,7 +20,7 @@ const title ="Dryer Thermal Fuse Replacement Cost - Ultimate Guide";
 <Reviews />
 <Layout >
   <Container>
-    <main>
+    <main style="max-width: 1440px; margin: 0 auto">
       <h1>
         <span class="animate-charcter">Dryer Thermal Fuse Replacement Cost</span
         >
