--- a/src/pages/price-list/dryer-vent-installation-cost.astro
+++ b/src/pages/price-list/dryer-vent-installation-cost.astro
@@ -20,7 +20,7 @@ const title ="Dryer Vent Installation Cost - Ultimate Customer Guide";
 <Reviews />
 <Layout >
   <Container>
-    <main>
+    <main style="max-width: 1440px; margin: 0 auto">
       <h1>
         <span class="animate-charcter">Dryer Vent Installation Cost</span>
       </h1>
