--- a/src/pages/price-list/dryer-vent-repair-cost.astro
+++ b/src/pages/price-list/dryer-vent-repair-cost.astro
@@ -21,7 +21,7 @@ const title ="Dryer Vent Repair Cost - Ultimate Customer Guide & Tips";
 <Reviews />
 <Layout>
   <Container>
-    <main>
+    <main style="max-width: 1440px; margin: 0 auto">
       <h1><span class="animate-charcter">Dryer Vent Repair Cost</span></h1>
 
       <div class="two-col-grid">
