--- a/src/pages/areas/pasadena/washing-machine-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/washing-machine-repair-pasadena.astro
@@ -9,7 +9,13 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/service-areas/pasadena/style-service-areas-pasadena.css";
+
+const description = "Need quick, reliable washer repair Pasadena CA? Our licensed expert technicians deliver exceptional service. Guaranteed results. (424) 325-0571";
+const title ="Same Day Washer Repair Pasadena CA - Best Local Service";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <!-- частые вопросы -->
 <script defer>
@@ -31,7 +37,7 @@ import "css/service-areas/pasadena/style-service-areas-pasadena.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Washing Machine Repair”, Pasadena">
+<Layout >
   <Container>
     <main>
       <h1>
