--- a/src/pages/areas/pasadena/bbq-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/bbq-repair-pasadena.astro
@@ -8,11 +8,16 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 
 import "css/service-areas/pasadena/style-service-areas-pasadena.css";
+
+const description = "Need quick, reliable BBQ grill repair Pasadena CA? Our licensed expert technicians deliver exceptional service. Guaranteed results. (424) 325-0548";
+const title ="BBQ Grill Repair Pasadena CA - Best Local Service - Warranty";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Appliance Repair BBQ Repair, Pasadena">
+<Layout>
   <Container>
     <div class="full-page">
       <div class="page-header">
