--- a/src/pages/areas/pasadena/commercial-dishwasher-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/commercial-dishwasher-repair-pasadena.astro
@@ -8,11 +8,17 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 
 import "css/service-areas/pasadena/style-service-areas-pasadena.css";
+
+const description = "Quick, reliable commercial dishwasher repair Pasadena CA? Our licensed expert technicians deliver exceptional service. Guaranteed results. (424) 325-0549";
+const title ="Commercial Dishwasher Repair Pasadena CA - Best Service";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <Navbar />
 <Reviews />
-<Layout title="Commercial Dishwasher Repair, Pasadena, CA">
+<Layout>
   <Container>
     <div class="full-page">
       <div class="page-header">
