--- a/src/pages/areas/pasadena/commercial-ice-machine-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/commercial-ice-machine-repair-pasadena.astro
@@ -8,11 +8,17 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 
 import "css/service-areas/pasadena/style-service-areas-pasadena.css";
+
+const description = "Need quick, reliable commercial ice machine repair Pasadena CA? Our licensed expert technicians deliver best service. Guaranteed results. (424) 325-0552";
+const title ="Commercial Ice Machine Repair Pasadena CA - Best Service";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <Navbar />
 <Reviews />
-<Layout title="Commercial Ice Machine Repair, Pasadena, CA">
+<Layout>
   <Container>
     <div class="full-page">
       <div class="page-header">
