--- a/src/pages/brands/bosch.astro
+++ b/src/pages/brands/bosch.astro
@@ -8,11 +8,17 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 
 import "css/brands/style-brands.css";
+
+const description = "Eexpert licensed Bosch repair Los Angeles & nearby areas. We repair all Bosch appliances such as dryers, ovens, refrigerators, and more. Call: (424) 325-0547";
+const title ="Bosch Repair Los Angeles: Expert Service! (424) 325-0547";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Bosch  Repair Los Angeles">
+<Layout >
   <Container>
     <div class="full-page">
       <div class="page-header">
