--- a/src/pages/brands/commercial-and-household.astro
+++ b/src/pages/brands/commercial-and-household.astro
@@ -9,11 +9,17 @@ import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 
 import "css/service/style_services.css";
+
+const description = "Our trained and licensed expert technicians provide same day service for all major brands. Up to 3 month of warratnty. Fast & reliable repairs. (424) 325-0547";
+const title ="Same Day Appliance Repair - All The Brands We Fix ";
 ---
+<title>{title}</title>
+<meta name="description" content={description} />
+
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Appliance Repair - We Fix All Brands: (424) 325-0520">
+<Layout>
   <Container>
     <div class="content">
       <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
