--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -100,7 +100,10 @@ import "@components/css-components/footer-cta.css";
           <a target="_blank" href="https://samedayappliance.repair/sitemap.xml"
             >Sitemap</a
           >
-          <h3 style="color:#ffffff;">Services</h3>
+
+
+          <h3 style="color:#ffffff; margin-top: 7px; ">Services</h3>
+
           <a target="_blank" href="/services/wine-cellar-repair/"
             >wine cellar repair</a
           ><br>
@@ -109,6 +112,17 @@ import "@components/css-components/footer-cta.css";
           ><br>
           <a target="_blank" href="/services/wine-cooler-repair/"
             >wine cellcooler repair</a
+          ><br>
+          <a target="_blank" href="services/commercial-and-household-los-angeles/"
+            >Commercial and household</a
+          >
+          <br>
+          <a target="_blank" href="services/commercial-laundry-machine-repair-los-angeles/"
+            >Commercial Laundry Machine</a
+          >
+          <br>
+          <a target="_blank" href="/contact/"
+            >Contact</a
           >
         </div>
 
